deploy: ecfe7bd6d9189964bf3ff043038918d889a43185

--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; k2 1.13 documentation</title>
+  <title>Index &mdash; k2 1.15.1 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -28,7 +28,7 @@
             <a href="index.html" class="icon icon-home"> k2
           </a>
               <div class="version">
-                1.13
+                1.15.1
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -76,6 +76,7 @@
 <div class="genindex-jumpbox">
  <a href="#_"><strong>_</strong></a>
  | <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
@@ -140,6 +141,12 @@
 </li>
         <li><a href="python_api/api.html#k2.RaggedTensor.__init__">(k2.RaggedTensor method)</a>
 </li>
+        <li><a href="python_api/api.html#k2.RnntDecodingConfig.__init__">(k2.RnntDecodingConfig method)</a>
+</li>
+        <li><a href="python_api/api.html#k2.RnntDecodingStream.__init__">(k2.RnntDecodingStream method)</a>
+</li>
+        <li><a href="python_api/api.html#k2.RnntDecodingStreams.__init__">(k2.RnntDecodingStreams method)</a>
+</li>
       </ul></li>
       <li><a href="python_api/api.html#k2.ragged.RaggedShape.__ne__">__ne__() (k2.ragged.RaggedShape method)</a>
 
@@ -182,6 +189,10 @@
 </li>
         <li><a href="python_api/api.html#k2.RaggedTensor.__str__">(k2.RaggedTensor method)</a>
 </li>
+        <li><a href="python_api/api.html#k2.RnntDecodingStream.__str__">(k2.RnntDecodingStream method)</a>
+</li>
+        <li><a href="python_api/api.html#k2.RnntDecodingStreams.__str__">(k2.RnntDecodingStreams method)</a>
+</li>
       </ul></li>
       <li><a href="python_api/api.html#k2.DenseFsaVec._from_dense_fsa_vec">_from_dense_fsa_vec() (k2.DenseFsaVec class method)</a>
 </li>
@@ -207,6 +218,8 @@
 </li>
       <li><a href="python_api/api.html#k2.add_epsilon_self_loops">add_epsilon_self_loops() (in module k2)</a>
 </li>
+      <li><a href="python_api/api.html#k2.RnntDecodingStreams.advance">advance() (k2.RnntDecodingStreams method)</a>
+</li>
       <li><a href="python_api/api.html#k2.ragged.RaggedTensor.arange">arange() (k2.ragged.RaggedTensor method)</a>
 
       <ul>
@@ -224,6 +237,14 @@
 </li>
       </ul></li>
       <li><a href="python_api/api.html#k2.Fsa.as_dict">as_dict() (k2.Fsa method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python_api/api.html#k2.RnntDecodingConfig.beam">beam (k2.RnntDecodingConfig attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -287,6 +308,8 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python_api/api.html#k2.RnntDecodingConfig.decoder_history_len">decoder_history_len (k2.RnntDecodingConfig attribute)</a>
+</li>
       <li><a href="python_api/api.html#k2.determinize">determinize() (in module k2)</a>
 </li>
       <li><a href="python_api/api.html#k2.DenseFsaVec.device">device (k2.DenseFsaVec attribute)</a>
@@ -303,6 +326,8 @@
         <li><a href="python_api/api.html#k2.RaggedTensor.device">(k2.RaggedTensor attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python_api/api.html#k2.ragged.RaggedShape.dim0">dim0 (k2.ragged.RaggedShape attribute)</a>
 
       <ul>
@@ -313,8 +338,6 @@
         <li><a href="python_api/api.html#k2.RaggedTensor.dim0">(k2.RaggedTensor attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python_api/api.html#k2.do_rnnt_pruning">do_rnnt_pruning() (in module k2)</a>
 </li>
       <li><a href="python_api/api.html#k2.Fsa.draw">draw() (k2.Fsa method)</a>
@@ -341,6 +364,8 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python_api/api.html#k2.RnntDecodingStreams.format_output">format_output() (k2.RnntDecodingStreams method)</a>
+</li>
       <li><a href="python_api/api.html#k2.CtcLoss.forward">forward() (k2.CtcLoss method)</a>
 </li>
       <li><a href="python_api/api.html#k2.SymbolTable.from_file">from_file() (k2.SymbolTable static method)</a>
@@ -368,6 +393,8 @@
       <li><a href="python_api/api.html#k2.Fsa.get_backward_scores">get_backward_scores() (k2.Fsa method)</a>
 </li>
       <li><a href="python_api/api.html#k2.get_best_matching_stats">get_best_matching_stats() (in module k2)</a>
+</li>
+      <li><a href="python_api/api.html#k2.RnntDecodingStreams.get_contexts">get_contexts() (k2.RnntDecodingStreams method)</a>
 </li>
       <li><a href="python_api/api.html#k2.Fsa.get_filler">get_filler() (k2.Fsa method)</a>
 </li>
@@ -477,11 +504,13 @@
 </li>
       <li><a href="python_api/api.html#k2.levenshtein_alignment">levenshtein_alignment() (in module k2)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python_api/api.html#k2.levenshtein_graph">levenshtein_graph() (in module k2)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python_api/api.html#k2.linear_fsa">linear_fsa() (in module k2)</a>
+</li>
+      <li><a href="python_api/api.html#k2.linear_fsa_with_self_loops">linear_fsa_with_self_loops() (in module k2)</a>
 </li>
       <li><a href="python_api/api.html#k2.linear_fst">linear_fst() (in module k2)</a>
 </li>
@@ -497,6 +526,8 @@
         <li><a href="python_api/api.html#k2.RaggedTensor.max">(k2.RaggedTensor method)</a>
 </li>
       </ul></li>
+      <li><a href="python_api/api.html#k2.RnntDecodingConfig.max_contexts">max_contexts (k2.RnntDecodingConfig attribute)</a>
+</li>
       <li><a href="python_api/api.html#k2.ragged.RaggedShape.max_size">max_size() (k2.ragged.RaggedShape method)</a>
 
       <ul>
@@ -505,6 +536,8 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python_api/api.html#k2.RnntDecodingConfig.max_states">max_states (k2.RnntDecodingConfig attribute)</a>
+</li>
       <li><a href="python_api/api.html#k2.SymbolTable.merge">merge() (k2.SymbolTable method)</a>
 </li>
       <li><a href="python_api/api.html#k2.ragged.RaggedTensor.min">min() (k2.ragged.RaggedTensor method)</a>
@@ -711,6 +744,8 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python_api/api.html#k2.RnntDecodingStreams.terminate_and_flush_to_streams">terminate_and_flush_to_streams() (k2.RnntDecodingStreams method)</a>
+</li>
       <li><a href="python_api/api.html#k2.DenseFsaVec.to">to() (k2.DenseFsaVec method)</a>
 
       <ul>
@@ -771,6 +806,8 @@
       </ul></li>
       <li><a href="python_api/api.html#k2.Nbest.total_scores">total_scores() (k2.Nbest method)</a>
 </li>
+      <li><a href="python_api/api.html#k2.trivial_graph">trivial_graph() (in module k2)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -799,6 +836,10 @@
         <li><a href="python_api/api.html#k2.RaggedTensor.values">(k2.RaggedTensor attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python_api/api.html#k2.RnntDecodingConfig.vocab_size">vocab_size (k2.RnntDecodingConfig attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
